--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -819,6 +819,37 @@
 
         $('.course-editor-section').on('click', '.save_template', function(){
             //Call ajax
+                if (Object.keys(CKEDITOR.instances).length > 0 ){
+                    var nodeContent = CKEDITOR.instances['ckeditor_textarea'].getData();
+                }
+                else{
+                    var nodeContent = $("#activity-content").text()
+                }
+                console.log(nodeContent);
+                var nodeId = $('.save_edit_activity').attr('data-current-activity-id');
+                var nodeName = $('#activity-' + nodeId).attr('data-name');
+
+                $.ajax({
+                    type: "POST",
+                    url: "{% url 'save_node' group_id %}",
+                    data:{
+                        'node_id' : nodeId,
+                        'name' : nodeName,
+                        'content' : nodeContent,
+                        'type_of_gst_name': 'Template',
+                        'replicate_resource': 'True',
+                        'member_of_gst_name': 'Page',
+                        'csrfmiddlewaretoken': '{{csrf_token}}'
+                    },
+                    success: function(data) {
+                        if (data == '0'){
+                            alert('Failed to save data. Please try again.');
+                            return 0;
+                        }
+                        console.log(data)
+                    }
+                });
+
         });
 
         function openCkEditor(editorContainerIdOrEl, toolbarType, content)
@@ -855,6 +886,7 @@
                     'node_id' : nodeId,
                     'name' : nodeName,
                     'content' : nodeContent,
+                    'member_of_gst_name': "activity",
                     'csrfmiddlewaretoken': '{{csrf_token}}'
               },
               success: function(data) {
