--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -145,7 +145,7 @@
     {% endif %}
 
     <section class="medium-12 columns content">
-      <div class="tabs-content">
+      <div class="tabs-content" id="scstyle">
 
         <div class="{{ group_policy }} {{ node.status|lower }} content active commentable-section" id="view-page" data-section-id="1">
 
