--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -9,7 +9,7 @@
                 <div class="course_tree">
                     <dl class="accordion course-lessons" data-accordion role="tablist">
                     </dl>
-                    <a href="#" class="button-hollow-grey add-lesson" data-reveal-id="myModal">Add Lesson</a>
+                    <a class="button-hollow-grey add-lesson" data-reveal-id="myModal">Add Lesson</a>
                       <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                         <h3>Lesson Name</h3>
                         <input type="text" id="lesson-name">
@@ -34,14 +34,14 @@
                                 <a href="">More</a>
                                 <ul class="dropdown_content right_align">
                                     <li>
-                                        <a href="#" class="save_template">Save as template</a>
+                                        <a class="save_template">Save as template</a>
                                     </li>
                                     <li>
-                                        <a href="#" data-reveal-id="existing_template_modal">Create from existing template</a>
+                                        <a data-reveal-id="existing_template_modal">Create from existing template</a>
                                     </li>
                                     <!--
                                     <li>
-                                        <a href="#" class="delete_entity">Delete</a>
+                                        <a class="delete_entity">Delete</a>
                                     </li>
                                     -->
                                 </ul>
@@ -252,7 +252,7 @@
                 <ul class="course-activities">
                     {{#each activities}}
                         <li id="activity-{{id}}" data-name="{{name}}">
-                            <a href="#" class="entity-title">{{name}}
+                            <a class="entity-title">{{name}}
                                 <div class="right edit_entity">
                                     <i class="fi-list right"></i>
                                     <ul class="entity_actions">
@@ -269,13 +269,13 @@
                     {{/each}}
                     <li>
                         <div class="custom_dropdown">
-                            <a href="#" class="button-hollow-grey add_activity">Add Activity</a>
+                            <a class="button-hollow-grey add_activity">Add Activity</a>
                             <ul class="dropdown_content left_align" >
                                 <li>
-                                    <a href="#" data-reveal-id="add-activity-modal" class="add_activity">Create new</a>
+                                    <a data-reveal-id="add-activity-modal" class="add_activity">Create new</a>
                                 </li>
                                 <li>
-                                    <a href="#" data-reveal-id="select-activity-page" class="add_existing_activity">Select from Activity Pages</a>
+                                    <a data-reveal-id="select-activity-page" class="add_existing_activity">Select from Activity Pages</a>
                                 </li>
                             <!--
                                 <li>
@@ -531,6 +531,9 @@
 
         });
 
+        $(document).on('open.fndtn.reveal', '#myModal', function () {
+            $("#lesson-name").val('')
+        });
 
         function addLesson(unitName, unitId) {
           /*
