--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -269,20 +269,18 @@
                     {{/each}}
                     <li>
                         <div class="custom_dropdown">
+                            <a data-reveal-id="select-activity-page" class="add_existing_activity"><u>Add from Activities</u></a>
+                            <!--
                             <a class="button-hollow-grey add_activity">Add Activity</a>
-                            <ul class="dropdown_content left_align" >
+                             <ul class="dropdown_content left_align" >
                                 <li>
                                     <a data-reveal-id="add-activity-modal" class="add_activity">Create new</a>
                                 </li>
                                 <li>
                                     <a data-reveal-id="select-activity-page" class="add_existing_activity">Select from Activity Pages</a>
                                 </li>
-                            <!--
-                                <li>
-                                    <a href="#">Create from existing template</a>
-                                </li>
-                            -->
                             </ul>
+                            -->    
                         </div>
                     </li>
                 </ul>
