New card listing: truncate good amt. of characters of name and description

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -785,6 +785,7 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
   overflow: hidden;
   padding-left: 6px;
   font-size: 11px;
+  color: grey;
 }
 
 /* line 887, ../../../scss/_clix2017.scss */
