--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
@@ -1,5 +1,5 @@
 {% for each in cursor %}
-    <a href="#" class="{{card_class}}" data-id="{{each.pk}}" data-name="{{each.name}}">
+    <a href="#" class="{{card_class}}" data-id="{{each.pk}}" data-name="{{each.name}}" title="{{each.name}}">
     <div class="small-12 medium-6 large-3 columns">
 
         <div class="asset_tile">
@@ -13,7 +13,7 @@
                 {% endif %}
             </div>
             <div class="asset_text">
-                <div class="asset_title">{{each.name|truncatechars:35}}</div>
+                <div class="asset_title" title="{{each.name}}">{{each.name|truncatechars:35}}</div>
                 <div class="asset_desc">{{each.content|truncatechars:35}}</div>
             </div>
         </div>
