--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
@@ -188,15 +188,15 @@ $("#btnUploadCancel").click(function() {
   <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4" >
     {% for each in imageCollection %}
     
-    <li class="card-image-wrapper" title="{{each.name}}">
-            <img  class="gallery-image" style="" data-image-id="{{each.pk}}" 
+    <li class="card-image-wrapper row" title="{{each.name}}">
+            <img  class="gallery-image" style="width:60%;" data-image-id="{{each.pk}}" 
               "{% if 'svg' in each.if_file.mime_type   %}"
               src="{{MEDIA_URL}}{{each.if_file.original.relurl}}"
               "{% else %}"
               src="{{MEDIA_URL}}{{each.if_file.thumbnail.relurl}}"
               "{% endif %}"
               data-image-src="{{MEDIA_URL}}{{each.if_file.original.relurl}}" >
-            <figcaption style="cursor:pointer">{{each.name|truncatechars:10}}</figcaption>
+            <figcaption style="cursor:pointer" title="{{each.name}}">{{each.name|truncatechars:10}}</figcaption>
     
     </li>
     {% endfor %}
