--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -878,6 +878,7 @@ ul.horizontal_tabs_gstudio {
             overflow: hidden;
             padding-left: 6px;
             font-size: 11px;
+            color: grey;
         }
     }
 }
@@ -2007,6 +2008,15 @@ ul.jqtree-tree .jqtree-toggler {
     padding: 5px 15px;
     box-shadow: 1px 0px 0px #000;
 
+    .unit_editor{
+   width: 100%;
+   height: 320px;
+   background: #fff;
+   padding: 5px 15px;
+   box-shadow: 1px 0px 0px #000;
+ 
+ }
+
     .back_to_group {
         padding: 0px 15px 0px 10px;
         border-right: 1px solid #ccc;
@@ -2017,7 +2027,7 @@ ul.jqtree-tree .jqtree-toggler {
     
             width: 500px;
             height: 40px;
-            border: 0px solid $secondry-blue;
+            border: 1px solid $secondry-blue;
             box-shadow: none;
             float: right;
             text-align: center;
@@ -2066,6 +2076,10 @@ ul.jqtree-tree .jqtree-toggler {
                 letter-spacing: 0.8px;
             }
         }
+
+        h5{
+            margin-top: 15px;
+        }
     }
 
     .course_heading span{
@@ -2101,7 +2115,7 @@ ul.jqtree-tree .jqtree-toggler {
     box-shadow: 0px 2px 3px #000;
     margin: 10px auto;
     padding: 10px;
-    height: calc(100vh - 100px);
+    height: calc(120vh - 100px);
 }
 
 .button-hollow-black{
