--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -1,4 +1,6 @@
 @import '/static/ndf/bower_components/videojs/dist/video-js.css';
+@import '/static/ndf/bower_components/videojs/dist/video.js';
+@import '/static/ndf/bower_components/videojs/dist/video.min.js';
 @import '/static/ndf/bower_components/videojs/dist/video-js.min.css';
 @import '/static/ndf/css/videojs-skin-color.css';
 @import '/static/ndf/css/rubik-fonts.css';
