--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/videojs-skin-color.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/videojs-skin-color.css
@@ -4,7 +4,12 @@
 .vjs-skin-colors-clix .vjs-control-bar {
   background-color: hsla(316, 88%, 26%, 1);
 }
-
+.vjs-skin-colors-clix .vjs-big-play-button{
+  text-align: center;
+  position: absolute;
+  left: 40%;
+  top: 50%;
+}
 .vjs-skin-colors-clix .vjs-big-play-button,
 .vjs-skin-colors-clix .vjs-menu-content {
   background-color: hsla(316, 88%, 26%, .7);
