--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/videoDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/videoDashboard.html
@@ -3,6 +3,7 @@
 {% block title %} video Gallery {% endblock %}
 {% block body_content %} 
 {% get_group_name groupid as group_name_tag %}
+{% comment %}
 <script type="text/javascript">
   var form = document.getElementById('docPost');
   var fileSelect = document.getElementById('docFile');
@@ -55,7 +56,7 @@
             else if(xhr.responseText )
             {
               var imageURL = "/media/"  + xhr.responseText;
-              				alert(imageURL);
+                      alert(imageURL);
                             var completeURL = imageURL
                             var width = prompt("Please enter width in px",'600');
                             if(width == null)
@@ -87,6 +88,7 @@
 
   
 </script>
+{% endcomment %}
 <script type="text/javascript">
   $(function() {
      $("input:file").change(function (){
@@ -159,7 +161,6 @@ $("#btnUploadCancel").click(function() {
 </div>
 {% endif %}
 
-{% endcomment %}
 
 <br>
 <br>
@@ -184,6 +185,7 @@ $("#btnUploadCancel").click(function() {
                             <input type="hidden" name="context_name" value="{{title}}">
                         </form>
                     </div>
+{% endcomment %}
   <br> <br>
  <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4" >
     {% for each in files_cur %}
