--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -8,7 +8,8 @@
         <ul class="title-area">
             <li class="name show-for-medium-up">
                 <a class="loggedin-user" href="{% url 'landing_page' %}">
-                <img src="https://clix.tiss.edu/wp-content/uploads/2015/12/curriculum-icons-clix-1.png">
+                
+                <img src="/static/ndf/images/clix-header-icon.png">
                 </a>
             </li>
             <li class="name hide-for-medium-up">
