processing messages added while uploading subtitle and transcript

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -144,7 +144,7 @@ $(".select-language").change(function(){
             // check if image is not in the list, add it.
             else if(xhr.responseText )
             {
-              alert(xhr.responseText);
+              alert("Subtitle uploaded successfully");
               location.reload();
             }
 
@@ -221,7 +221,7 @@ $(".select-language").change(function(){
             // check if image is not in the list, add it.
             else if(xhr.responseText )
             {
-              alert(xhr.responseText);
+              alert("Transcript added successfully");
               location.reload();
             }
 
